# task-management-api

./: Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml
app/: main.py  migrate.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  tasks.py
app/core/: config.py  db.py  security.py
app/models/: tasks.py  users.py
app/services/: user.py
