[tool.poetry]
name = "task-management-api"
version = "0.1.0"
description = ""
authors = ["Isaias Valle <guitartsword@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
